[tool.poetry]
name = "what-if-query-plan"
version = "0.1.0"
description = "SC3020 Project 2"
authors = ["Woon Yee, NG"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.2"
pyvis = "^0.3.2"
groq = "^0.11.0"
transformers = "^4.46.2"
streamlit = "^1.40.0"
psycopg2-binary = "^2.9.10"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
